[package]
name = "nuke-it"
version = "0.4.0"
edition = "2024"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
