[package]
name = "nuke-it"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "It's time to kick ass and chew bubblegum... and I'm all outta gum."
repository = "https://github.com/babinc/nuke-it"
keywords = ["shred", "secure-delete", "file-shredder", "wipe"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
